--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Avengers</title>
+    <head>
+        <title>Make a superhero</title>
+    </head>
+    <body class="body_background">
+        <center>
+        	<h2 class="btn-primary">Make a superhero</h2>
 
-<link rel="stylesheet" href="style.css">
-
-<script src="fabric.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-
-<script src="https://ajax.googlxeapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-<body class="body_background">
-
-	<center>
-		<h2 class="btn-primary">Avengers</h2>
-
-	<div id="head_info">
-		<h3 class="btn-danger">Current Width  = <span id="currentWidth">30</span> </h3>
-		<h3 class="btn-danger">Current Height  = <span id="currentHeight">30</span> </h3>
-	</div>
-	<canvas id = "myCanvas" width="1000" height="600"></canvas>	
-	</center>
-	<script src="main.js"></script>
-</body>
+	    <div id="head_info" class="btn-danger">
+		<h3>Current Width  = <span id="current_Width">30</span></h3>
+		<h3>Current Height  = <span id="current_Height">30</span></h3>
+	    </div>
+        <canvas id="myCanvas" height="600" width="800"></canvas>
+        </center>
+        <link rel="stylesheet" href="style.css">
+        <script src="fabric.js"></script>
+        <script src="main.js"></script>
+    </body>
 </html>
